# trap

./: .gitmodules  .travis.yml  README.md  makefile
c/: CMakeLists.txt
c/apue/: CMakeLists.txt
c/src/: CMakeLists.txt  test.c  test.h
c/test/: CMakeLists.txt
c/test/basic/: CMakeLists.txt  function.md  function.test.cpp  io.md  keyword.md  library.md  main.md  operator.test.cpp  point.md  primitive.md  primitive.test.cpp  struct.md  type.md
go/: go.mod
go/basic/: nill_test.go  syntax_test.go
go/test/: testing_test.go
java/: build.gradle  settings.gradle
javascript/: package.json
javascript/ecmascript5/: Array.js  Function.js  Json.js  Number.js  Object.js  Primitive.js  RegExp.js  String.js  Syntax.js
javascript/ecmascript6/: ADT.js  Array.js  BlockScope.js  Class.js  Decorator.js  Destructuring.js  Function.js  Generator.js  Object.js  Promise.js  Proxy.js  Reflect.js  RegExp.js  String.js  Symbol.js  Syntax.js  decorator.js
kotlin/: build.gradle  gradlew  settings.gradle
python/: .gitignore  Pipfile
python/basic/: Magic.py  Operator.py  Syntax.py  test_boolean.py  test_built_in_function.py  test_built_in_type.py  test_class.py  test_function.py  test_generator.py  test_operator.py  test_property.py  test_sequence.py  test_string.py  test_syntax.py
python/numpy/: test_array.py  test_broadcast.py  test_matrix.py  test_np.py  test_property.py  test_tensor.py
python/stdlib/: test_argparse.py  test_unittest.py
python/syntax/: Class.py  Exception.py  (+3 more)
rust/: Cargo.toml
shell/: makefile
typescript/: package.json  tsconfig.json  tslint.json
(+417 files in other folders)
